[metadata]
name = backlight
version = 0.0.1
author = baldulin
author_email = baldulin@systemli.org
description = Changes linux backlight
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baldulin/backlight
project_urls =
    Bug Tracker = https://github.com/baldulin/backlight
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    backlight = backlight.main:run
